fixing layout issues, bringing back in sync with original

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3583,10 +3583,39 @@ h5.mobile-only {
 
 	.logo{
 		position: fixed;
+		top: 0;
+		width: 86%;
+		background: #fff;
+		padding: 13px;
+		// border-bottom: 1px solid #CCC;
+
+		margin: 0 7%;
+		transform: none;
+		left: 0px;
+		a {
+			@include centerH;
+			float: left;
+			margin-left: -8px;
+		}
 	}
+
+	.intro .intro-message{
+		top: calc(270px + 28%);
+	}
+
+	
 
 	.assessment{
 		&.scrollpane{
+
+			.assessment-divider{
+				position: fixed;
+				z-index: 4500;
+				top: 0px;
+				margin: 73px 10% 0;
+				width: 80%;
+				border-bottom: 1px solid #CCC;
+			}
 			overflow: hidden;
 			height: auto;
 			min-height: 100%;
@@ -3614,7 +3643,7 @@ h5.mobile-only {
 			top:0px;
 			left:0px;
 			transform: none !important;
-			padding: 6.5rem 2.5rem 0;
+			padding: 8.5rem 2.5rem 0;
 			width: 100%;
 			max-width: none;
 		}
@@ -3629,6 +3658,7 @@ h5.mobile-only {
 
 		.question {
 			display: none;
+			opacity: 0;
 			overflow: hidden;
 			height: 0px;
 			transform: none !important;
@@ -3640,6 +3670,7 @@ h5.mobile-only {
 			&.in{
 				display: block;
 				overflow: visible;
+				opacity: 1;
 				height: auto;
 				transform: none !important;
 				top: 0px;
@@ -3660,7 +3691,7 @@ h5.mobile-only {
 					width: 100%;
 				}
 				&.gif{
-					margin: 70px auto 230px;
+					margin: 90px auto 230px;
 					.prompt{
 						top:78px;
 					}
